--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,7 @@ dbUrl=jdbc:mysql://${ip}:3306/${dbName}?user=${dbUsername}&password=${dbPassword
 redis_ip=127.0.0.1
 
 elasticsearch_ip=127.0.0.1
+
+db_1=web-scrapping-db-1
+db_2=web-scrapping-db-2
 management.endpoint.restart.enabled=true 
