add new category lazada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,11 @@ dbUrl=jdbc:mysql://${ip}:3306/${dbName}?user=${dbUsername}&password=${dbPassword
 redis_ip=127.0.0.1
 #redis_ip=172.17.0.3
 
-elasticsearch_ip=127.0.0.1
+elasticsearch_ip=http://127.0.0.1:9200/
 #elasticsearch_ip=172.17.0.4
 
 db_1=web-scrapping-db-1
 db_2=web-scrapping-db-2
 
-index_web_scrapping_category=web_scrapping_categories2
+index_web_scrapping_category=web_scrapping_categories
 management.endpoint.restart.enabled=true 
