--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8082
 dbName=WEB_SCRAPPING
 dbUsername=root
 dbPassword=mandarinkb
@@ -17,8 +17,9 @@ redis_ip=127.0.0.1
 elasticsearch_ip=http://127.0.0.1:9200/
 #elasticsearch_ip=172.17.0.4
 
+#database name in elasticsearch
 db_1=web-scrapping-db-1
 db_2=web-scrapping-db-2
 
+#category name in elasticsearch
 index_web_scrapping_category=web_scrapping_categories
-management.endpoint.restart.enabled=true 
