--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,7 @@ redis_ip=127.0.0.1
 #redis_ip=172.17.0.3
 
 elasticsearch_ip=http://127.0.0.1:9200/
-#elasticsearch_ip=172.17.0.4
-
-#database name in elasticsearch
-db_1=web-scrapping-db-1
-db_2=web-scrapping-db-2
+#elasticsearch_ip=http://172.17.0.4:9200/
 
 #category name in elasticsearch
 index_web_scrapping_category=web_scrapping_categories
