--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ dbPassword=mandarinkb
 #127.0.0.1
 
 #ip=127.0.0.1
-ip=mariadb
+ip=188.166.189.133
 
 #jdbcDriver=com.mysql.jdbc.Driver
 jdbcDriver=org.mariadb.jdbc.Driver
@@ -15,7 +15,7 @@ dbUrl=jdbc:mysql://${ip}:3306/${dbName}?user=${dbUsername}&password=${dbPassword
 redis_ip=redis
 
 #elasticsearch_ip=http://127.0.0.1:9200/
-elasticsearch_ip=http://elasticsearch:9200/
+elasticsearch_ip=http://188.166.189.133:9200/
 
 #category name in elasticsearch
 index_web_scrapping_category=web_scrapping_categories
